# grumpy-chef-finetuning-dpo

./: .gitignore  README.md  SFT_then_DPO.ipynb  finetuning_sft_dpo_unsloth.ipynb  grumpy_chef_dataset.json  pyproject.toml
