[project]
name = "ft-dpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "bitsandbytes==0.49.1",
    "accelerate==1.12.0",
    "peft==0.18.1",
    "trl==0.22.2",
    "triton==3.6.0",
    "cut-cross-entropy==25.1.1",
    "unsloth-zoo==2026.1.4",
    "sentencepiece==0.2.1",
    "protobuf==6.33.5",
    "datasets==4.3.0",
    "huggingface-hub>=0.34.0",
    "hf-transfer==0.1.9",
    "transformers==4.57.3",
    "unsloth==2026.1.4",
]


# [[tool.uv.index]]
# name = "pytorch-cu130"
# url = "https://download.pytorch.org/whl/cu130"
# explicit = true

# [tool.uv.sources]
# torch = [
#   { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
# ]
# torchvision = [
#   { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
# ]
